--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,22 @@
         <link rel="icon" href="" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Surbay</title>
+        <title>SurBay</title>
+        <!-- Google Analytics setting -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-221434188-1"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "UA-221434188-1");
+        </script>
+        <!-- Kakao SDK setting -->
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     </head>
     <body>
